# Musika

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CHANGELOG_ANDROID.md  CHANGELOG_DESKTOP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DLNA_SETUP.md  FEATURES.md  PRIVACY_POLICY.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  fix-capitalization.ps1  fix-imports.ps1  fix-innertube.ps1  fix-kugou.ps1  fix-lrclib.ps1  fix-packages-final.ps1  generate-icons.js  gradle.properties  package-lock.json  rebrand-echo.ps1  rebrand-modules.ps1  rebrand-packages.ps1  rebrand-simple.ps1  rebrand-xml-final.ps1  rebrand-xml.ps1  settings.gradle.kts
.github/: codesentinel.agent.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/agents/: my-agent.agent.md
.github/workflows/: desktop-release.yml  release-assets.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
auth-worker/: .dev.vars.example  README.md  package-lock.json  package.json  wrangler.toml
auth-worker/src/: auth.ts  index.ts
crash-reporter-worker/: README.md  package-lock.json  package.json  wrangler.toml
crash-reporter-worker/migrations/: 001_create_crash_logs.sql
crash-reporter-worker/src/: index.js
desktop/: README.md  package-lock.json  package.json
desktop/frontend/: app.css  (+2 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
gradle/: libs.versions.toml
tools/: local_crash_dashboard.py
website/: next.config.ts  package-lock.json  package.json  tsc-errors.txt
(+521 files in other folders)
