[package]
name = "musika_desktop"
version = "4.0.0"
description = "Musika Desktop"
authors = ["Musika Team"]
license = "GPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
